# rest-terraform-provider-generator

./: .golanci.yaml  Cargo.toml  README.md  TODO.md  askama.toml  generate_and_build.sh  go.mod  go.sum  lint.sh  tools.go
.github/workflows/: ci.yml
example/: genspec.yaml  rest_api_provider_schema.json
example/files/: BUILD.md  Makefile  QUICKSTART.md  README.md  go.mod  main.go  main.tf
example/files/internal/client/: client.go
example/files/internal/provider/: order_data_source.go  order_resource.go  pet_data_source.go  pet_resource.go  provider.go  user_data_source.go  user_resource.go
internal/: main.go
internal/code_generator/: main.go  main_templates.go  resource_property.go  resource_template.go
internal/code_generator/templates/main/: Makefile.tmpl  _go.mod  go.mod.tmpl  main.go.tmpl
internal/oas_parser/: parser.go
internal/provider_spec/: generate_source.sh  parser.go  provider_schema.go  provider_schema_funcs.go  rest_api_provider_schema.json
rust_src/code_generator/: helper_templates.rs
rust_src/code_generator/templates/helper/: attribute_definition.go
rust_src/code_generator/templates/main/: main.go
rust_src/oas_parser/: parser.rs
rust_src/provider_spec/: mod.rs  rest_api_provider_schema.rs
src/: main.go  main.rs  rest_api_provider_schema.rs
src/code_generator/: main_templates.rs  mod.rs  templates.rs
src/code_generator/templates/: Makefile  go.mod  main.go
src/provider_spec/: generate_source.sh  parser.go  provider_schema.go  rest_api_provider_schema.json
src/templates/: main.go  main_templates.go
(+10 files in other folders)
