[package]
name = "terraform-api-provider-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
clap = "4.5.53"
maplit = "1.0.2"
oas3 = "0.20.1"
roas = { version = "0.6.0", features = ["v2", "v3_0", "v3_1"] }
serde = "1.0.228"
serde-saphyr = "0.0.11"
serde_json = "1.0.145"
